# CRISPR-HAWK

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  crispron-crisprhawk.yml  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml  python-publish.yml
paper/: README.md  compute_samples_number.py  generate-figures.ipynb  reproduce-results.sh  run_analysis.ipynb
src/crisprhawk/: __main__.py  annotate.py  annotation.py  bedfile.py  bitset.py  candidate_guides.py  config.py  config_crispritz.py  config_crispron.py  config_sgdesigner.py  config_utils.py  converter.py  coordinate.py  crisprhawk.py  crisprhawk_argparse.py  crisprhawk_error.py  crisprhawk_version.py  crispritz.py  crisprme_data.py  encoder.py  enrichment.py  exception_handlers.py  fasta.py  graphical_reports.py  guide.py  haplotype.py  haplotypes.py  offtarget.py  offtargets.py  pam.py  region.py  region_constructor.py  regions.py  reports.py  scores.py  scoring.py  scoring_envs.py  search_guides.py  search_offtargets.py  sequence.py  (+5 more)
src/crisprhawk/config/: config.json
src/crisprhawk/scores/: __init__.py  crisprhawk_scores.py
src/crisprhawk/scores/azimuth/: azimuth.py  azimuth_error.py  azimuth_utils.py  features.py  model_comparison.py  predict.py  util.py
src/crisprhawk/scores/cfdscore/: cfdscore.py
src/crisprhawk/scores/crispron/: crispron.py
src/crisprhawk/scores/deepCpf1/: seqdeepcpf1.py
src/crisprhawk/scripts/: xa2multi.pl
test-data/VCFs/test/: chrx.vcf.gz.tbi
test-data/sequence/: chrx.fa  chrx.fa.fai
test-out/: crisprhawk_guides__chr2_60457194_60553654_NGG_20_old.tsv  crisprhawk_guides__chrx_450_550_NGG_20.tsv  crisprhawk_guides__chrx_495_500_NGG_20.tsv  crisprhawk_guides__chrx_550_650_NGG_20.tsv  crisprhawk_guides__chrx_598_603_NGG_20.tsv  crisprhawk_guides__chrx_90_750_NGG_20.tsv
test-out/synthetic-benchmark/: crisprhawk_guides__chrx_300_700_NGG_20.tsv
tests/: test_annotate.py  test_annotation.py  test_bedfile.py  test_bitset.py  test_candidate_guides.py  test_converter.py  test_encoder.py  test_graphical_reports.py  test_guide.py  test_haplotype.py  test_haplotypes.py  test_offtarget.py  test_offtargets.py  test_pam.py  test_region.py  test_region_constructor.py  test_reports.py  test_scoring.py  test_search_guides.py  test_utils.py  test_variant.py
(+17 files in other folders)
